# research-with-notebooklm-mcp

./: README.md  pyproject.toml
scripts/: login.py
src/notebooklm_mcp/: __init__.py  client.py  persona_registry.py  server.py
src/notebooklm_mcp/prompts/: __init__.py
src/notebooklm_mcp/resources/: __init__.py
src/notebooklm_mcp/tools/: __init__.py  auth.py  chat.py  compare.py  download.py  generate.py  notebook.py  persona.py  pipeline.py  research.py  source.py
